# anomalib-openvino-cpp

./: CMakeLists.txt  CMakeSettings.json  README.md  inference.hpp  main.cpp  utils.cpp
cmake/: CMakeLists.txt  inference.hpp  main.cpp  utils.cpp  utils.h
vs/: inference.hpp  main.cpp  opencv_utils.h  utils.cpp  utils.h  vs.sln  vs.vcxproj  vs.vcxproj.filters
